# prevalence-shifts

./: .gitignore  README.md  requirements.txt
data/mic23_predictions_original_0/PREDICTIONS/DSET001_lapgyn4%TASK_lapgyn4_anatomical_actions_miccai/: preds-test-fold-0_0001.pt  preds-val-fold-0_0001.pt
data/mic23_predictions_original_0/PREDICTIONS/DSET001_lapgyn4%TASK_lapgyn4_surgical_actions_miccai/: preds-test-fold-0_0001.pt  preds-val-fold-0_0001.pt
data/mic23_predictions_original_0/PREDICTIONS/DSET015_hyperkvasir%TASK_hyperkvasir_therapeutic-interventions_miccai/: preds-test-fold-0_0001.pt  preds-val-fold-0_0001.pt
results/: 24_decision_rule_results_Affine (dep. prev.)_argmax.pkl  24_decision_rule_results_Affine (dep. prev.)_dev test.pkl  24_decision_rule_results_Affine (est. prev.)_argmax.pkl  24_decision_rule_results_Affine (est. prev.)_dev test.pkl  24_decision_rule_results_No re-calibration_argmax.pkl  24_decision_rule_results_No re-calibration_dev test.pkl  24_metric_performance_Affine (dep. prev.).pkl  24_metric_performance_No re-calibration.pkl  24_prev_estimation_df.pkl  24_recalibration_results.csv  24_uncertainty_calibration.csv  24_uncertainty_decision_rule.pkl  24_uncertainty_metric.pkl  24_uncertainty_quantification.pkl  README.md  calibration_results_app_test.csv
src/: 1_generate_predictions.ipynb  2_plot_examples.ipynb  3_exp_1_calibration.ipynb  3_prevalence_estimation.ipynb  4_calibration.ipynb  4_exp_2_decision_rule.ipynb  5_exp_3_validation_metrics.ipynb  5_threshold_visualization.ipynb  6_decision_rule.ipynb  7_validation_metrics.ipynb  8_uncertainty.ipynb  output_create.txt  output_predict.txt  output_tag.txt
src/mml_plugin/prevalences/: README.md  pyproject.toml  setup.cfg
src/mml_plugin/prevalences/src/mml_prevalences/: __init__.py  activate.py  tag.py
src/prev/: __init__.py  calibration.py  data_loading.py  metrics.py  plotting.py  quantification.py  scaling.py  thresholding.py  utils.py
src/training_scripts/: 01_create_cmds.txt  02_pp_cmds.txt  03_tag_cmds.txt  04_reproduce_cmds.txt  05_dataseed_cmds.txt  06_dataseed_predict_cmds.txt  07_retraining_cmds.txt  08_retraining_estimated_cmds.txt
